#ifndef TMESHVALUE
#define TMESHVALUE 1

/*
    Data class for mesh values.
    And also constants and Derived variables
    Class name is not so good.
*/

#include <vector>

#include <TString.h>

#include "TSDFReader.hpp"


class MeshPar{
public:
   MeshPar(){};
   MeshPar(TString id, TString Name, TString Title, Bool_t use)
      :ID(id),
       Name(Name),
       Title(Title),
       Use(use){};
   
   TString ID;
   TString Name;
   TString Title;
   Bool_t Use;
};

class TMeshValue
{
public:
   TMeshValue(TSDFReader *reader);
   ~TMeshValue();

   void SetAllOn();
   void ChoseMesh();
   void GetMeshData();

private:
   TSDFReader *fReader;

   // For getting list of Mesh values
   void GetListOfMesh();
   std::vector<MeshPar> fMeshList;
   
   // For getting mesh values
   void ReadMeshGrid(TString id);
   void GetMeshHis(TString id, TString Name, TString Title);

   // Parameters for histogram.  Its will be generated by grid information
   Double_t fHisMin[3];
   Double_t fHisMax[3];
   TString fHisLabel[3];
   TString fHisUnit[3];
   Double_t fHisBinWidth[3];

};

#endif
